# SystemStatsMonitoring

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/superpowers/plans/: 2026-07-06-local-desktop-mvp.md
docs/superpowers/specs/: 2026-07-06-local-desktop-mvp-design.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  metrics.rs  models.rs  s3_sync.rs  settings.rs  store.rs
src/lib/: format.test.ts  format.ts  history.test.ts  history.ts  i18n.test.ts  i18n.ts  metrics.test.ts  metrics.ts  settings.test.ts  settings.ts  tauri.ts
